--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "connect-redis": "^7.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -42,6 +43,7 @@
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2",
+    "multer": "^1.4.5-lts.1",
     "redis": "^4.6.13"
   }
 }
